--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -5,6 +5,7 @@ imports:
     - { resource: "@WebSocketBundle/Resources/config/services.yml" }
     - { resource: "@RESTBundle/Resources/config/services.yml" }
     - { resource: "@WebViewsBundle/Resources/config/services.yml" }
+    - { resource: "@DatabaseBundle/Resources/config/services.yml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
