--- a/src/DatabaseBundle/Resources/config/services.yml
+++ b/src/DatabaseBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
-#    database.example:
-#        class: DatabaseBundle\Example
-#        arguments: ["@service_id", "plain_value", %parameter%]
+    database.mysql:
+        class: DatabaseBundle\MySQL
+        arguments: [@doctrine.dbal.default_connection]
