FUUUUCCKKK! Write to DB WORKING! WARNING! Need some uncomments in php.ini

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -42,6 +42,7 @@ twig:
 # Doctrine Configuration
 doctrine:
     dbal:
+        default_connection: default
         driver:   pdo_mysql
         host:     localhost
         dbname:   HomeControl
