--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -46,8 +46,8 @@ doctrine:
         driver:   pdo_mysql
         host:     localhost
         dbname:   HomeControl
-        user:     root
-        password: 191978
+        user:     homecontrol
+        password: unicorn
         charset:  UTF8
         # if using pdo_sqlite as your database driver:
         #   1. add the path in parameters.yml
