Maked users table, refactor DatabaseBundle

--- a/src/DatabaseBundle/Resources/config/services.yml
+++ b/src/DatabaseBundle/Resources/config/services.yml
@@ -1,4 +1,7 @@
 services:
-    database.access:
-        class: DatabaseBundle\DB
+    temperatures.access:
+        class: DatabaseBundle\TemperaturesAccess
+        arguments: [@doctrine.dbal.default_connection]
+    users.access:
+        class: DatabaseBundle\UsersAccess
         arguments: [@doctrine.dbal.default_connection]
