--- a/src/WebSocketBundle/Resources/config/services.yml
+++ b/src/WebSocketBundle/Resources/config/services.yml
@@ -4,4 +4,4 @@ services:
 #        arguments: ["@service_id", "plain_value", %parameter%]
     web_socket:
         class: WebSocketBundle\WebSocket
-        arguments: [@database.access]
+        arguments: [@temperatures.access]
