--- a/src/UserBundle/Resources/config/services.yml
+++ b/src/UserBundle/Resources/config/services.yml
@@ -2,3 +2,6 @@ services:
 #    user.example:
 #        class: UserBundle\Example
 #        arguments: ["@service_id", "plain_value", %parameter%]
+    user.provider:
+        class: userBundle\UserProvider
+        arguments: [@users.access]
