Authorization. Need encoder

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -30,8 +30,8 @@ security:
             http_basic:
                 provider: in_memory
             form_login:
-                check_path: /login
                 login_path: /login
+                check_path: /login_check
             security: true
 
     access_control:
