--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -9,7 +9,7 @@ security:
                 users:
                     admin:
                         password: admin
-                        roles: ROLE_ADMIN
+                        roles: 'ROLE_ADMIN'
         main_user:
             id: user.provider
 
@@ -32,11 +32,17 @@ security:
             form_login:
                 login_path: /login
                 check_path: /login_check
+                always_use_default_target_path: true
+                target_path_parameter: redirect_url
+                use_referer: true
             security: true
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/, role: ROLE_ADMIN }
+
+    encoders:
+            Symfony\Component\Security\Core\User\User: plaintext
 
 
             # activate different ways to authenticate
