Fixed run script, added logout

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -29,6 +29,9 @@ security:
             pattern: ^/
             http_basic:
                 provider: in_memory
+            logout:
+                path: /logout
+                target: /
             form_login:
                 login_path: /login
                 check_path: /login_check
