--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -13,6 +13,10 @@ imports:
 #        result_cache_driver: apc
 #        query_cache_driver: apc
 
+parameters:
+    websocket.host: 'ws://smarthouse.php.onlini.co'
+    websocket.port: 3389
+
 monolog:
     handlers:
         main:
