--- a/src/WebSocketBundle/Resources/config/services.yml
+++ b/src/WebSocketBundle/Resources/config/services.yml
@@ -2,9 +2,6 @@ services:
 #    web_socket.example:
 #        class: WebSocketBundle\Example
 #        arguments: ["@service_id", "plain_value", %parameter%]
-    web_socket:
-        class: WebSocketBundle\WebSocket
-        arguments: [@temperatures.access]
-    web_socket_command:
+    websocket.command:
         class: WebSocketBundle\Command\ServerCommand
         arguments: [@temperatures.access]
