--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -69,3 +69,28 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+hwi_oauth:
+    # name of the firewall in which this bundle is active, this setting MUST be set
+    firewall_name: secured_area
+    resource_owners:
+        facebook:
+            type:                facebook
+            client_id:           711728598930210
+            client_secret:       6ea5effb9d8eb762031b1f1358f98660
+            scope:               "email, public_profile"
+            infos_url:           "https://graph.facebook.com/me?fields=id,name,email,picture.type(large)"
+            paths:
+                email: email
+            options:
+                display: page
+                csrf: true
+        google:
+            type:                google
+            client_id:           755438172754-bdmrg079mhch5dl2rjsd7n8dlng9tnct.apps.googleusercontent.com
+            client_secret:       DNJjhHoF3qcIgjO1eO2XwLh_
+            scope:              "https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile"
+            paths:
+                email: email
+            options:
+                csrf: true
