--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -11,7 +11,7 @@ imports:
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: en
-
+    sm_session_save_path: "%kernel.root_dir%/../var/sessions/"  #%kernel.environment%"
 
 framework:
     #esi:             ~
@@ -30,8 +30,8 @@ framework:
     trusted_hosts:   ~
     trusted_proxies: ~
     session:
-        # handler_id set to null will use default session handler from php.ini
-        handler_id:  ~
+        save_path:   %sm_session_save_path%
+        handler_id: session.handler.native_file
     fragments:       ~
     http_method_override: true
 
