--- a/src/WebSocketBundle/Resources/config/services.yml
+++ b/src/WebSocketBundle/Resources/config/services.yml
@@ -4,4 +4,5 @@ services:
 #        arguments: ["@service_id", "plain_value", %parameter%]
     websocket.command:
         class: WebSocketBundle\Command\ServerCommand
-        arguments: [@temperatures.access]
+        calls:
+                - ["setSession", ['@session']]
