--- a/src/UserBundle/Resources/config/services.yml
+++ b/src/UserBundle/Resources/config/services.yml
@@ -2,6 +2,10 @@ services:
 #    user.example:
 #        class: UserBundle\Example
 #        arguments: ["@service_id", "plain_value", %parameter%]
-    user.provider:
+
+    hwi_oauth.user.provider:
+        class: HWI\Bundle\OAuthBundle\Security\Core\User\OAuthUserProvider
+
+    ib_user.oauth_user_provider:
         class: UserBundle\UserProvider
-        arguments: [@users.access]
+        arguments: [@session, @service_container, {facebook: facebookID, google: googleID}]
