--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -85,13 +85,24 @@ hwi_oauth:
             paths:
                 email: email
             options:
-                display: popup
-                csrf: true
+                display:         popup
+                auth_type:       rerequest
+                csrf:            true
         google:
             type:                google
             client_id:           755438172754-bdmrg079mhch5dl2rjsd7n8dlng9tnct.apps.googleusercontent.com
             client_secret:       DNJjhHoF3qcIgjO1eO2XwLh_
-            scope:              "https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile"
+            scope:              ""
+            paths:
+                email: email
+            options:
+                csrf: true
+
+        github:
+            type:                 github
+            client_id:           09cd97d3042a640947e7
+            client_secret:       437d65347f1fc78f2121a308059e67fc805064f8
+            scope:               ""
             paths:
                 email: email
             options:
