--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -32,7 +32,7 @@ security:
                     facebook:           "/login/check-facebook"
                     google:             "/login/check-google"
                     my_custom_provider: "/login/check-custom"
-                    my_github:          "/login/check-github"
+                    github:             "/login/check-github"
                 login_path:        /login
                 use_forward:       false
                 failure_path:      /login
